--- a/TranslationMod/TranslationMod.csproj
+++ b/TranslationMod/TranslationMod.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FuzzyString, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\StormOriginal\Storm\packages\FuzzyString.1.0.0\lib\FuzzyString.dll</HintPath>
+      <HintPath>..\..\Storm\Storm\packages\FuzzyString.1.0.0\lib\FuzzyString.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -45,7 +45,7 @@
     </Reference>
     <Reference Include="Microsoft.Xna.Framework.Xact, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\StormOriginal\Storm\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\Storm\Storm\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Storm-Hooked-Game">
@@ -75,22 +75,7 @@
     <None Include="languages\EN\content\Fonts\SmallFont.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-<<<<<<< HEAD
-    <None Include="languages\RUnameGen.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="languages\StupidoDictionary.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="languages\upload.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="languages\Characters.RU.json">
-||||||| merged common ancestors
-    <None Include="languages\Characters.RU.json">
-=======
     <None Include="languages\EN\content\Fonts\SpriteFont1.xnb">
->>>>>>> 7f3cae79ba5c88f9b4d0d0e25f6e0948f2f7ae15
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="languages\EN\content\LooseSprites\Billboard.xnb">
@@ -99,32 +84,6 @@
     <None Include="languages\EN\content\LooseSprites\Billboard_calendar.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-<<<<<<< HEAD
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="content\desertTiles.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\fall_outdoorsTileSheet.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\fall_town.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Festivals.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\HospitalTiles.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\LooseSprites\Billboard.png">
-||||||| merged common ancestors
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="content\LooseSprites\Billboard.png">
-=======
     <None Include="languages\EN\content\LooseSprites\Billboard_itemofday.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -297,7 +256,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="languages\RU\content\Maps\spring_town.xnb">
->>>>>>> 7f3cae79ba5c88f9b4d0d0e25f6e0948f2f7ae15
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="languages\RU\content\Maps\spring_townbuildings.xnb">
@@ -308,116 +266,15 @@
     </None>
     <None Include="languages\RU\content\Maps\summer_outdoorsTileSheet.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-<<<<<<< HEAD
-    </Content>
-    <Content Include="content\LooseSprites\Cursors.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\LooseSprites\font_bold.png">
-||||||| merged common ancestors
-    </Content>
-    <Content Include="content\LooseSprites\font_bold.png">
-=======
     </None>
     <None Include="languages\RU\content\Maps\summer_town.xnb">
->>>>>>> 7f3cae79ba5c88f9b4d0d0e25f6e0948f2f7ae15
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="languages\RU\content\Maps\summer_townbuildings.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-<<<<<<< HEAD
-    </Content>
-    <Content Include="content\LooseSprites\JunimoNote.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\LooseSprites\skillTitles.png">
-||||||| merged common ancestors
-    </Content>
-    <Content Include="content\LooseSprites\skillTitles.png">
-=======
     </None>
     <None Include="languages\RU\content\Maps\TownIndoors.xnb">
->>>>>>> 7f3cae79ba5c88f9b4d0d0e25f6e0948f2f7ae15
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-<<<<<<< HEAD
-    </Content>
-    <Content Include="content\Maps\desertTiles.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\fall_beach.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\fall_outdoorsTileSheet.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\fall_town.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\fall_townbuildings.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\Festivals.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\HospitalTiles.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\spring_beach.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\spring_outdoorsTileSheet.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\spring_town.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\spring_townbuildings.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\summer_beach.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\summer_outdoorsTileSheet.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\summer_town.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\summer_townbuildings.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\TownIndoors.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\townInterior.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\winter_beach.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\winter_outdoorsTileSheet.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\winter_town.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\winter_townbuildings%28tmp%29.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Maps\winter_townbuildings.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Minigames\Intro.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Minigames\jojacorps.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\Minigames\TitleButtons.png">
-||||||| merged common ancestors
-    </Content>
-    <Content Include="content\Minigames\TitleButtons.png">
-=======
     </None>
     <None Include="languages\RU\content\Maps\townInterior.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -426,52 +283,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="languages\RU\content\Maps\winter_outdoorsTileSheet.xnb">
->>>>>>> 7f3cae79ba5c88f9b4d0d0e25f6e0948f2f7ae15
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-<<<<<<< HEAD
-    </Content>
-    <Content Include="content\spring_beach.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\spring_outdoorsTileSheet.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\spring_town.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\spring_townbuildings.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\summer_beach.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\TileSheets\desertTiles.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\TileSheets\fall_townbuildings.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\TileSheets\fall_townsheet.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\TileSheets\HospitalTiles.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\TownIndoors.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\townInterior.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\winter_outdoorsTileSheet.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\winter_town.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-||||||| merged common ancestors
-    </Content>
-=======
     </None>
     <None Include="languages\RU\content\Maps\winter_town.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -524,6 +336,9 @@
     <None Include="languages\RU\dictionaries\MiniGames.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="languages\RU\dictionaries\nameGen.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="languages\RU\dictionaries\Object.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -531,7 +346,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
->>>>>>> 7f3cae79ba5c88f9b4d0d0e25f6e0948f2f7ae15
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Storm\Storm\Storm\Storm.csproj">
@@ -547,7 +361,7 @@
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
