Fix 2+ keys (@key @key) problem, and more

--- a/MultiLanguage/MultiLanguage.csproj
+++ b/MultiLanguage/MultiLanguage.csproj
@@ -79,6 +79,9 @@
     <None Include="languages\descriptions.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="languages\EN\content\Fonts\BorderFont.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="languages\EN\content\Fonts\SmallFont.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -197,6 +200,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="languages\EN\content\TileSheets\HospitalTiles.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="languages\RU\content\Fonts\BorderFont.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="languages\RU\content\Fonts\SmallFont.xnb">
